--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@tanstack/react-router": "^1.44.1",
     "lucide-react": "^0.406.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "tailwind-variants": "^0.2.1"
   },
   "devDependencies": {
     "@tanstack/router-devtools": "^1.44.1",
