--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@tanstack/react-router": "^1.44.1",
+    "date-fns": "^3.6.0",
     "lucide-react": "^0.406.0",
     "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "tailwind-variants": "^0.2.1"
   },
